common/tests/badSemantic/primitiveExps.output
primitiveExps.tyco:32.6: 
Floats no longer supported
primitiveExps.tyco:32.12: 
Syntax error at %
primitiveExps.tyco:32.14: 
Floats no longer supported
primitiveExps.tyco:37.13: 
Floats no longer supported
primitiveExps.tyco:37.20: 
Syntax error at ]
primitiveExps.tyco:38.6: 
Floats no longer supported
primitiveExps.tyco:39.6: 
Floats no longer supported
primitiveExps.tyco:39.10: 
Syntax error at /
primitiveExps.tyco:40.13: 
Floats no longer supported
primitiveExps.tyco:40.20: 
Syntax error at ]
primitiveExps.tyco:44.6: 
Floats no longer supported
primitiveExps.tyco:44.14: 
Floats no longer supported
primitiveExps.tyco:45.6: 
Floats no longer supported
13 errors
